--- a/index.css
+++ b/index.css
@@ -8,6 +8,11 @@ body {
     margin: 0px;
     font-family: sans-serif;
     background-color: rgb(221, 193, 217);
+    flex-direction: row; /* sobreescriu la declaració flex-direction:column; */
+
+    flex-flow: row-reverse; /* disposició de dreta a esquerra, per
+
+mostrar el menú a l'esquerra */
 }
 
 
@@ -20,6 +25,7 @@ body {
     font-size: 4vmax;
     color: aliceblue;
     background-color: rgb(49, 51, 165);
+    display: none; /* franja superior oculta per optimitzar l'espai*/
 }
 
 #seccio_1{
@@ -27,29 +33,43 @@ body {
     justify-content: center;
     align-items: center;
     font-size: 4vmax;
-    background-color: rgb(215, 216, 150);
+    background-color: rgb(246, 247, 200);
 }
 #seccio_2{
     display: flex;
     justify-content: center;
     align-items: center;
     font-size: 4vmax;
-    background-color: rgb(176, 164, 187);
+    background-color: #e6cfe2;
 }
 #seccio_3{
     display: flex;
     justify-content: center;
     align-items: center;
     font-size: 4vmax;
-    background-color: rgb(165, 194, 199) ;
+    background-color: rgb(203, 226, 230) ;
 }
 #seccio_4{
     display: flex;
     justify-content: center ;
     align-items: center;
     font-size: 4vmax;
-    background-color: rgb(125, 199, 137);
+    background-color: rgb(178, 224, 186);
 }
 #menu {
+    display: flex;
     height: 8vmax;
+}
+#menu i {
+    flex: 1; /* cada botó pretén ocupar tot l'espai disponible */
+    display: flex; /* contenidor flex on centrar-hi la icona */
+    justify-content: center;
+    align-items: center;
+    color: rgb(235, 229, 229);
+    background-color: #c08282;
+    font-size: 5vmax;
+    cursor: pointer; /* en ordinadors, indica que s'hi pot fer clic */
+    flex-direction: column;
+    width: 8vmax;
+    height: auto;
 }
