--- a/index.css
+++ b/index.css
@@ -1,77 +1,73 @@
+html {
+    height: -webkit-fill-available;
+}
 body {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    min-height: 100vh;
-    min-height: 100svh;
     min-height: -webkit-fill-available;
     margin: 0px;
     font-family: sans-serif;
-    background-color: rgb(221, 193, 217);
-    flex-direction: row; /* sobreescriu la declaració flex-direction:column; */
-
-    flex-flow: row-reverse; /* disposició de dreta a esquerra, per
-
-mostrar el menú a l'esquerra */
+    background-color: rgb(224, 205, 218);
 }
-
+h2 { 
+color: rgb(255, 255, 255);
+align-items: center;
+}
 
 #superior {
     display: flex;
-    flex-direction: column;
     height: 8vmax;
-    justify-content:center;
+    justify-content: center;
     align-items: center;
     font-size: 4vmax;
-    color: aliceblue;
-    background-color: rgb(49, 51, 165);
-    display: none; /* franja superior oculta per optimitzar l'espai*/
+    color: rgb(255, 255, 255);
+    background-color: rgb(142, 114, 148);
 }
-
 #seccio_1 {
     display: flex;
     justify-content: center;
     align-items: center;
-    font-size: 4vmax;
-    background-color: rgb(246, 247, 200);
+    font-size: 1.5vmax;
+    color: rgb(175, 0, 245);
+    flex-direction: column;
 }
 #seccio_2 {
     display: flex;
     justify-content: center;
     align-items: center;
-    font-size: 4vmax;
-    background-color: #e6cfe2;
+    font-size: 1.5vmax;
+    color: rgb(106, 73, 126);
+    flex-direction: column;
 }
 #seccio_3 {
     display: flex;
     justify-content: center;
     align-items: center;
-    font-size: 4vmax;
-    background-color: rgb(203, 226, 230) ;
+    font-size: 1.5vmax;
+    color: rgb(60, 14, 90);
+    flex-direction: column;
 }
-
-#seccio_4 {
+#inici {
     display: flex;
-    justify-content: center ;
-    align-items: center;
-    font-size: 4vmax;
-    background-color: rgb(178, 224, 186);
+    justify-content: left;
+    align-items: left;
+    font-size: 2vmax;
+    color: rgba(5, 86, 110, 0.918);
+    flex-direction: column;
 }
 #menu {
-    display: flex;
     height: 8vmax;
+    display: flex;
+    
 }
-
-#menu i {
-    flex: 1; /* cada botó pretén ocupar tot l'espai disponible */
-    display: flex; /* contenidor flex on centrar-hi la icona */
+#menu a{
+    flex: 1; 
+    display: flex; 
     justify-content: center;
     align-items: center;
-    color: rgb(235, 229, 229);
-    background-color: #c08282;
+    color: rgb(255, 255, 255);
+    background-color: rgb(40, 26, 46);
     font-size: 5vmax;
-    cursor: pointer; /* en ordinadors, indica que s'hi pot fer clic */
-    flex-direction: column;
-    width: 8vmax;
-    height: auto;
-}
+    cursor: pointer; 
+    }
